--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,8 +8,8 @@ pipeline {
             steps {
                 script{ 
                     sh """
-                        apt update & apt upgrade
-                        apt install curl
+                        sudo apt update & sudo apt upgrade
+                        sudo apt install curl
                     """
                     // sh """
                     //      if [ ! -f helm ]; then
