--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         stage('Preparations') {
             steps {
                 script{ 
-                    echo 'pipeline has started'
+                    sh "echo 'pipeline has started'"
                     // sh """
                     //    apt update & apt upgrade
                     //    apt install curl
