--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,13 +10,13 @@ pipeline {
                     sh "echo 'pipeline has started'"
                     sh "curl google.com"
                     
-                    // sh """
-                    //      if [ ! -f helm ]; then
-                    //         /usr/bin/curl -fsSL -o helm.tar.gz  https://get.helm.sh/helm-v3.7.1-linux-amd64.tar.gz
-                    //         tar -xzf helm.tar.gz linux-amd64/helm
-                    //         mv linux-amd64/helm helm
-                    //     fi
-                    // """
+                    sh """
+                         if [ ! -f helm ]; then
+                            /usr/bin/curl -fsSL -o helm.tar.gz  https://get.helm.sh/helm-v3.7.1-linux-amd64.tar.gz
+                            tar -xzf helm.tar.gz linux-amd64/helm
+                            mv linux-amd64/helm helm
+                        fi
+                    """
                 }
             }
         }
