--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
                             /usr/bin/curl -fsSL -o helm.tar.gz  https://get.helm.sh/helm-v3.7.1-linux-amd64.tar.gz
                             tar -xzf helm.tar.gz linux-amd64/helm
                             mv linux-amd64/helm helm
+                            chmod +x helm
                         fi
                     """
 
