--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,8 +19,8 @@ pipeline {
                         fi
                     """
 
-                    sh "helm repo add azure-samples https://azure-samples.github.io/helm-charts/"
-                    sh "helm install azure-samples/aks-helloworld" 
+                    sh ". helm repo add azure-samples https://azure-samples.github.io/helm-charts/"
+                    sh ". helm install azure-samples/aks-helloworld" 
                 }
             }
         }
