--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,8 +19,8 @@ pipeline {
                         fi
                     """
 
-                    sh ". helm repo add azure-samples https://azure-samples.github.io/helm-charts/"
-                    sh ". helm install azure-samples/aks-helloworld" 
+                    sh "/var/jenkins_home/workspace/Install-Hello-world-eks/helm repo add azure-samples https://azure-samples.github.io/helm-charts/"
+                    sh "/var/jenkins_home/workspace/Install-Hello-world-eks/helm install azure-samples/aks-helloworld" 
                 }
             }
         }
