--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
                         fi
                     """
 
+                    sh "kubectl get pods"
                     sh "/var/jenkins_home/workspace/Install-Hello-world-eks/helm repo add azure-samples https://azure-samples.github.io/helm-charts/"
                     sh "/var/jenkins_home/workspace/Install-Hello-world-eks/helm install hello-world azure-samples/aks-helloworld" 
                 }
