install hello world

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,8 @@ pipeline {
         stage('Preparations') {
             steps {
                 script{ 
-                    echo 'STAGE: Preparations has started'
+                    echo 'pipeline has started'
+                    
                     sh """
                          if [ ! -f helm ]; then
                             /usr/bin/curl -fsSL -o helm.tar.gz  https://get.helm.sh/helm-v3.7.1-linux-amd64.tar.gz
@@ -15,7 +16,9 @@ pipeline {
                             mv linux-amd64/helm helm
                             chmod +x helm
                         fi
+                    """
 
+                    sh """
                         if [ ! -f kubectl ]; then
                             /usr/bin/curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
                             chmod +x kubectl
