--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
 
                     sh """
                         if [ ! -f kubectl ]; then
-                            /usr/bin/curl -LO "https://dl.k8s.io/release/\$\(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+                            /usr/bin/curl -LO "https://dl.k8s.io/release/`curl -L -s https://dl.k8s.io/release/stable.txt`/bin/linux/amd64/kubectl"
                             chmod +x kubectl
                         fi
                     """
