--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,8 +35,8 @@ pipeline {
 
                 sh "${WORKSPACE}/kubectl get pods"
                 sh "${WORKSPACE}/helm repo add azure-samples https://azure-samples.github.io/helm-charts/"
-                sh "${WORKSPACE}/helm install hello-world azure-samples/aks-helloworld --set serviceType=LoadBalancer -n jenkins"
-                sh "${WORKSPACE}/kubectl autoscale deployment acs-helloworld-hello-world --cpu-percent=50 --min=1 --max=10 -n jenkins"
+                sh "${WORKSPACE}/helm install hello-world azure-samples/aks-helloworld --set serviceType=LoadBalancer"
+                sh "${WORKSPACE}/kubectl autoscale deployment acs-helloworld-hello-world --cpu-percent=50 --min=1 --max=10"
                 
                 echo 'Helm-Installation Stage: Finished'
             }          
