--- a/kubernetes/hello-world.yaml
+++ b/kubernetes/hello-world.yaml
@@ -21,6 +21,9 @@ spec:
           requests:
             memory: "64Mi"
             cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
         - containerPort: 80
         env:
