--- a/kubernetes/scaling-cronjobs.yaml
+++ b/kubernetes/scaling-cronjobs.yaml
@@ -10,7 +10,7 @@ rules:
 
 ---
 kind: RoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: cron-runner
   namespace: default
@@ -31,7 +31,7 @@ metadata:
   namespace: default
 ---
 
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: django-scale-up-job
@@ -55,7 +55,7 @@ spec:
             - kubectl patch hpa acs-helloworld --patch '{"spec":{"minReplicas":10}}'
           restartPolicy: OnFailure
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: django-scale-down-job
