--- a/kubernetes/scaling-cronjobs.yaml
+++ b/kubernetes/scaling-cronjobs.yaml
@@ -31,7 +31,7 @@ metadata:
   namespace: default
 ---
 
-apiVersion: batch/v1
+apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: django-scale-up-job
@@ -55,7 +55,7 @@ spec:
             - kubectl patch hpa acs-helloworld --patch '{"spec":{"minReplicas":10}}'
           restartPolicy: OnFailure
 ---
-apiVersion: batch/v1
+apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: django-scale-down-job
